--- a/images-collect/images-collect.csproj
+++ b/images-collect/images-collect.csproj
@@ -5,8 +5,8 @@
     <Platform Condition=" '$(Platform)' == '' ">anycpu</Platform>
     <ProjectGuid>{F68D02C4-00B0-4206-8FA2-1DA9B0235565}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>imagescollect</RootNamespace>
-    <AssemblyName>images-collect</AssemblyName>
+    <RootNamespace>S21eimagescollect</RootNamespace>
+    <AssemblyName>s21e-images-collect</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|anycpu' ">
@@ -39,19 +39,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Tblarticoli.cs" />
-    <Compile Include="Service\GoogleImages.cs" />
-    <Compile Include="Model\Search.cs" />
+    <Compile Include="Model\**.*" />
+    <Compile Include="Service\**.*" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Data\" />
-    <Folder Include="Data\tblarticolo.json" />
     <Folder Include="Service\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Data\tblarticolo.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
