prova di web scraping

--- a/images-collect/app.config
+++ b/images-collect/app.config
@@ -2,5 +2,6 @@
 <configuration>
    <appSettings>
        <add key="DataPath" value="/Users/erighetto/DotNetProjects/s21e-images/images-collect/Data/" />
+       <add key="AssetsPath" value="/Users/erighetto/DotNetProjects/s21e-images/assets/" />
    </appSettings>
 </configuration>
