--- a/images-refine/packages.config
+++ b/images-refine/packages.config
@@ -1,27 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
-  <package id="HtmlAgilityPack.CssSelectors" version="1.0.2" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Net.Http.Headers" version="2.0.2" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
-  <package id="PuppeteerSharp" version="2.0.3" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
-  <package id="System.IO" version="4.3.0" targetFramework="net472" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net472" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.Caching" version="4.7.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.26.0.1" targetFramework="net472" />
 </packages>
