--- a/images-refine/packages.config
+++ b/images-refine/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="RandomUserAgent" version="1.1.2" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.GeckoDriver" version="0.26.0.1" targetFramework="net472" />
