--- a/images-scrape/images-scrape.csproj
+++ b/images-scrape/images-scrape.csproj
@@ -5,8 +5,8 @@
     <Platform Condition=" '$(Platform)' == '' ">anycpu</Platform>
     <ProjectGuid>{157CBB7C-743B-456C-B9CF-38270C654331}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>S21eimagesrefine</RootNamespace>
-    <AssemblyName>s21e-images-refine</AssemblyName>
+    <RootNamespace>S21eimagesscrape</RootNamespace>
+    <AssemblyName>s21e-images-scrape</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|anycpu' ">
@@ -65,5 +65,5 @@
     <Folder Include="Model\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Selenium.WebDriver.GeckoDriver.0.26.0.1\build\Selenium.WebDriver.GeckoDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.GeckoDriver.0.26.0.1\build\Selenium.WebDriver.GeckoDriver.targets')" />
+  <Import Project="..\packages\Selenium.WebDriver.GeckoDriver.0.27.0\build\Selenium.WebDriver.GeckoDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.GeckoDriver.0.27.0\build\Selenium.WebDriver.GeckoDriver.targets')" />
 </Project>
