--- a/src/ImagesScrape/ImagesScrape.csproj
+++ b/src/ImagesScrape/ImagesScrape.csproj
@@ -13,5 +13,7 @@
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.27.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     </ItemGroup>
 </Project>
