--- a/src/ImagesExport/appsettings.json
+++ b/src/ImagesExport/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
-  "DataPath": "/Users/erighetto/DotNetProjects/s21e-images/data/",
-  "AssetsPath": "/Users/erighetto/DotNetProjects/s21e-images/assets/",
+  "AppSetting": {
+    "DataPath": "/Users/erighetto/DotNetProjects/s21e-images/data/",
+    "AssetsPath": "/Users/erighetto/DotNetProjects/s21e-images/assets/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
