--- a/S21eImages/S21eImages.csproj
+++ b/S21eImages/S21eImages.csproj
@@ -24,4 +24,9 @@
     <Folder Include="Model\" />
     <Folder Include="Manger\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
