--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     build:
       context: .
       dockerfile: S21eImages/Dockerfile
+      network: host
+    network_mode: "host"
+    ports:
+      - 3306:3306
     environment:
        - MYSQL_HOST
        - MYSQL_USER
